# rustikv

./: AGENTS.md  Cargo.toml  README.md  TASKS.md
.claude/: settings.json
bench/: Dockerfile  docker-compose.yml
docs/: telemetry-store-experiment.md
docs/benchmark-runs/2026-04-25/: redis-compare-100B.txt  redis-comparison-analysis.md  sparse-index-1-bclz77.txt  sparse-index-1-comparison.md  sparse-index-sweep.md
docs/superpowers/plans/: 2026-05-03-multi-eventloop-tcp-server.md  2026-05-24-aggregation-sum-avg-min-max.md  2026-05-24-count-command.md  2026-05-24-prefix-command.md  2026-05-25-lsm-collections.md  2026-05-25-rustikv-telemetry-gateway.md
docs/superpowers/specs/: 2026-05-03-multi-eventloop-tcp-server-design.md  2026-05-24-aggregation-design.md  2026-05-24-count-command-design.md  (+3 more)
scripts/: analyze-redis-compare.py  measure-disk-si1.ps1  run-lz77-sparse1-bench.sh  run-si-sweep.sh
src/: bffp.rs  cli.rs  collections.rs  engine.rs  kvengine.rs  lib.rs  lsmengine.rs  main.rs  settings.rs  sstable.rs  utils.rs
src/server/: acceptor.rs  connection.rs  dispatch.rs  lifecycle.rs  mod.rs  worker.rs  workerhandler.rs
tests/: aggregate_command.rs  bffp_collections.rs  block_sstable.rs  collections.rs  collections_tcp.rs  compact_async.rs  count_command.rs  incr_command.rs  kv_incr.rs  lsm_aggregate.rs  lsm_count.rs  lsm_incr.rs  lsmengine.rs  prefix_command.rs  prefix_successor.rs  rustikli.rs  server_connection.rs  server_dispatch.rs  server_graceful_close.rs  server_idle_timeout.rs  server_max_connections.rs  server_multi_worker.rs  sstable.rs
(+56 files in other folders)
