[package]
name = "rustikv"
version = "0.1.0"
edition = "2024"
default-run="rustikv"

[[bin]]
name = "rustikli"
path = "src/bin/rustikli.rs"

[[bin]]
name = "rustikv"
path = "src/main.rs"

[dependencies]
mio-runtime = { git = "https://github.com/SilvioPilato/mio-runtime.git", version = "0.1.0" }
mio = { version = "1.2.0", features = ["net"] }
